# delivery-openenv

./: .gitignore  Dockerfile  README.md  checklist.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json
delivery_env/: __init__.py  client.py  grading.py  models.py  simulator.py
delivery_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: baseline.py  smoke_ws_client.py  validate_presubmit.zsh
server/: __init__.py  app.py  environment.py
